--- a/example_impl/Dockerfile
+++ b/example_impl/Dockerfile
@@ -12,6 +12,6 @@ COPY . .
 RUN go build -o kurtosis-go-example example_impl/main.go
 
 CMD set -euo pipefail && ./kurtosis-go-example \
-    --test-names-filepath=${TEST_NAMES_FILEPATH} \
+    --metadata-filepath=${METADATA_FILEPATH} \
     --test=${TEST} \
     --kurtosis-api-ip=${KURTOSIS_API_IP} 2>&1 | tee ${LOG_FILEPATH}
