--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 
 script:
   - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash .ci/check_for_changelog_in_diff.sh; fi
-  - scripts/full_build_and_run.sh
+  - scripts/build.sh
