--- a/example_impl/Dockerfile
+++ b/example_impl/Dockerfile
@@ -14,4 +14,5 @@ RUN go build -o kurtosis-go-example example_impl/main.go
 CMD set -euo pipefail && ./kurtosis-go-example \
     --metadata-filepath=${METADATA_FILEPATH} \
     --test=${TEST} \
+    --log-level=${LOG_LEVEL} \
     --kurtosis-api-ip=${KURTOSIS_API_IP} 2>&1 | tee ${LOG_FILEPATH}
