--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,40 @@
 version: 2.1
-jobs:
-  build:
-    environment:
-      CIRCLE_BASE_REVISION: "<< pipeline.git.base_revision >>"
+
+executors:
+  ubuntu_vm:
     machine:
       image: ubuntu-1604:202007-01
       # DO NOT USE THIS YET! This costs 200 credits *per job run* so is extremely expensive for the free plan, but we can turn it on one day if we get more credits
       # docker_layer_caching: true
+
+jobs:
+  build:
+    executor: ubuntu_vm
+    environment:
+      CIRCLE_BASE_REVISION: "<< pipeline.git.base_revision >>"
     steps:
       - checkout
 
       # TODO Add caching like in https://circleci.com/docs/2.0/language-go/
-      - run: 'if [ "${CIRCLE_PULL_REQUEST}" != "" ]; then bash .circleci/check_for_changelog_in_diff.sh ${CIRCLE_BASE_REVISION} ${CIRCLE_BRANCH} ; fi'
+      
+      - run: "bash .circleci/check_for_changelog_in_diff.sh << pipeline.git.base_revision >> ${CIRCLE_BRANCH}"
       - run: scripts/build.sh
+  push_docker_image:
+    steps:
+      # TODO change this to be parameterized - it's hardcoded right now
+      run: "docker push kurtosistech/kurtosis-go-example:<< pipeline.git.branch >>"
+
+workflows:
+  main:
+    # We only want to run the workflow when we have a pull request!
+    when: "<< pipeline.git.base_revision >>"
+    jobs:
+      - build
+      - push_docker_image:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - master
