--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run: "bash .circleci/check_for_changelog_in_diff.sh << pipeline.git.base_revision >> ${CIRCLE_BRANCH}"
       - run: scripts/build.sh
   push_docker_image:
+    executor: ubuntu_vm
     steps:
       # TODO change this to be parameterized - it's hardcoded right now
       run: "docker push kurtosistech/kurtosis-go-example:<< pipeline.git.branch >>"
