Switch to array of strings for job steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
   push_docker_image:
     executor: ubuntu_vm
     steps:
-      run: "docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}"
+      - run: "docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}"
       # TODO change the image name to be parameterized - it's hardcoded right now
-      run: "docker push kurtosistech/kurtosis-go-example:<< pipeline.git.branch >>"
+      - run: "docker push kurtosistech/kurtosis-go-example:<< pipeline.git.branch >>"
 
 workflows:
   main:
