--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,13 @@ jobs:
   validate_pr:
     executor: ubuntu_vm
     steps:
+      # Frustratingly, CircleCI doesn't have a pipeline value indicating pull requests so we can't use a "when" condition to make sure we don't even run this
+      #  job since the "when" condition is evaluated at configuration time and the environment variables like CIRCLE_PULL_REQUEST are only injected at runtime
+      #  after spinning up the VM (meaning for all non-PR commits, we're going to waste time spinning up the VM only to abort)
+      - run: |
+          if [ -z "$CIRCLE_PULL_REQUEST"]; then
+              circleci step halt
+          fi
       - checkout
       - run: "bash .circleci/check_for_changelog_in_diff.sh << pipeline.git.base_revision >> ${CIRCLE_BRANCH}"
       - run: scripts/build.sh
@@ -31,7 +38,11 @@ jobs:
 
 workflows:
   pr_validation:
-    when: "$CIRCLE_PULL_REQUEST"
+    when:
+      not:
+        or: 
+        - equal: [ "develop", "<< pipeline.git.branch >>" ]
+        - equal: [ "master", "<< pipeline.git.branch >>" ]
     jobs:
       - validate_pr
 
