Upgrade image to be able to have a single suite execution volume

--- a/example_impl/Dockerfile
+++ b/example_impl/Dockerfile
@@ -11,10 +11,12 @@ COPY . .
 # Build the application
 RUN go build -o kurtosis-go-example example_impl/main.go
 
+# TODO Get rid of tee/LOG_FILEPATH in favor of using a Docker logging driver in the initializer
 # Note how we use a variable custom to this particular test suite, GO_EXAMPLE_SERVICE_IMAGE
 CMD set -euo pipefail && ./kurtosis-go-example \
     --metadata-filepath=${METADATA_FILEPATH} \
     --service-image=${GO_EXAMPLE_SERVICE_IMAGE} \
     --test=${TEST} \
     --log-level=${LOG_LEVEL} \
+    --services-relative-dirpath=${SERVICES_RELATIVE_DIRPATH} \
     --kurtosis-api-ip=${KURTOSIS_API_IP} 2>&1 | tee ${LOG_FILEPATH}
