--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,10 @@ jobs:
               circleci step halt
           fi
       - checkout
-      - run: "bash .circleci/check_for_changelog_in_diff.sh << pipeline.git.base_revision >> ${CIRCLE_BRANCH}"
+
+      # TODO Circle has no way of getting the PR base branch, so we hardcode develop :(
+      - run: "bash .circleci/check_for_changelog_in_diff.sh develop ${CIRCLE_BRANCH}"
+      
       - run: scripts/build_and_run.sh
 
   push_docker_image:
