--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
 
       # TODO Circle has no way of getting the PR base branch, so we hardcode develop :(
-      - run: "bash .circleci/check_for_changelog_in_diff.sh develop ${CIRCLE_BRANCH}"
+      - run: "bash .circleci/check_for_changelog_in_diff.sh develop"
       
       - run: scripts/build_and_run.sh
 
