--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       # TODO Debugging
       - run: git --version
       - run: git rev-parse HEAD
-      - run: git diff develop...HEAD
+      - run: git diff --name-only develop...HEAD
 
       # TODO Circle has no way of getting the PR base branch, so we hardcode develop :(
       # The --exit-code command will return 0 on no changes, 1 on changes
