--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
       - run: "docker push ${IMAGE_REPO}:${TAG_NAME}"
 
 workflows:
+  build:
     jobs:
       # If we start using too many CircleCI credits, we can exclude develop and master from validation
       - validate
