--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,12 @@ jobs:
 workflows:
   build:
     jobs:
-      # If we start using too many CircleCI credits, we can exclude develop and master from validation
-      - validate
+      - validate:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
       - push_docker_image:
           filters:
             branches:
