--- a/.github/workflows/comment-run.yml
+++ b/.github/workflows/comment-run.yml
@@ -17,7 +17,8 @@ jobs:
       with:
         # 0 indicates all history
         fetch-depth: 0
-    - uses: nwtgck/actions-comment-run@v1.1.3
+    - uses: mieubrisse/actions-comment-run@mieubrisse/disjunctive-whitelisted-users
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         allowed-associations: '["OWNER"]'
+        whitelisted-users: '["mieubrisse"]'
