Almost-working new version of the example testsuite

--- a/testsuite/Dockerfile
+++ b/testsuite/Dockerfile
@@ -13,7 +13,8 @@ RUN go build -o testsuite.bin testsuite/main.go
 
 CMD ./testsuite.bin \
     `# ------------- Custom variable particular to this test suite -----------------` \
-    --service-image=${SERVICE_IMAGE} \
+    --api-service-image=${API_SERVICE_IMAGE} \
+    --datastore-service-image=${DATASTORE_SERVICE_IMAGE} \
     `# ------------------Kurtosis-specific environment variables -------------------` \
     `# See: https://github.com/kurtosis-tech/kurtosis-docs/blob/master/testsuite-details.md` \
     --kurtosis-api-ip=${KURTOSIS_API_IP} \
