Bugfixes to not hit testsuite limit

--- a/testsuite/Dockerfile
+++ b/testsuite/Dockerfile
@@ -23,6 +23,7 @@ CMD ./testsuite.bin \
     `# ------------- Custom variable particular to this test suite -----------------` \
     --api-service-image=${API_SERVICE_IMAGE} \
     --datastore-service-image=${DATASTORE_SERVICE_IMAGE} \
+    --is-kurtosis-core-dev-mode=${IS_KURTOSIS_CORE_DEV_MODE} \
     `# ------------------Kurtosis-specific environment variables -------------------` \
     `# See: http://docs.kurtosistech.com/testsuite-details.html` \
     --kurtosis-api-ip=${KURTOSIS_API_IP} \
