--- a/testsuite/Dockerfile
+++ b/testsuite/Dockerfile
@@ -21,7 +21,14 @@ COPY --from=builder /build/testsuite.bin .
 
 # TODO Switch to exec command form, wrapping arguments with double-quote
 CMD ./testsuite.bin \
-    `# ------------- Custom variable particular to this test suite -----------------` \
+    --custom-params-json="${CUSTOM_PARAMS_JSON}" \
+    --kurtosis-api-socket="${KURTOSIS_API_SOCKET}" \
+    --log-level="${LOG_LEVEL}"
+
+
+
+
+
     --api-service-image=${API_SERVICE_IMAGE} \
     --datastore-service-image=${DATASTORE_SERVICE_IMAGE} \
     --is-kurtosis-core-dev-mode=${IS_KURTOSIS_CORE_DEV_MODE} \
